kubernetes/jim/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jim-service
  labels:
    ttech-app: jim
spec:
  rules:
    - host: 159.89.14.108.nip.io
      http:
        paths:
          - path: /jim
            backend:
              serviceName: jim-service
              servicePort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: jim-service
  labels:
    ttech-app: jim
spec:
  ports:
    - port: 80
      targetPort: 8000
  selector:
    ttech-app: jim
